docker-test/k8s/vnc-pod-manager/k8s/tcp-services-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-nginx-tcp
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/component: controller
  ports:
    # SSH port range (will be dynamically extended)
    - name: ssh-22000
      port: 22000
      protocol: TCP
      nodePort: 32000  # NodePort range 30000-32767
    - name: ssh-22001
      port: 22001
      protocol: TCP
      nodePort: 32001
